[gd_scene load_steps=2 format=3 uid="uid://j6lot68gir1y"]

[ext_resource type="Script" path="res://scripts/ui/army_selector.gd" id="1_juhxc"]

[node name="ArmySelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_juhxc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0262397, 0.124579, 0.2873, 0.4)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -12.0
offset_right = 78.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select Army:"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
clip_contents = false
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 0

[node name="ArmyList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Play"
